<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.sid.viwe.settingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settins_display_image"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:src="@drawable/default_avatar" />

    <TextView
        android:id="@+id/settings_disp_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settins_display_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/default_disp"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/settings_disp_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_disp_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/default_status"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/change_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_disp_status"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40sp"
        android:layout_marginTop="30dp"
        android:background="@color/colorAccent"
        android:text="@string/change_img"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <Button
        android:id="@+id/change_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/change_img"
        android:layout_below="@+id/change_img"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="25dp"
        android:background="@color/colorAccent"
        android:text="@string/change_status"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <Button
        android:id="@+id/delete_acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_status"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40sp"
        android:layout_marginTop="20dp"
        android:background="#FC1401"
        android:text="@string/delete_acc"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <Button
        android:id="@+id/changeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/delete_acc"
        android:layout_alignEnd="@+id/delete_acc"
        android:background="@color/colorAccent"
        android:padding="5sp"
        android:text="@string/change_name"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>
