<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20sp"
    android:paddingRight="20sp"
    tools:context="com.sid.viwe.deleteuserActivity">

    <EditText
        android:id="@+id/del_acc_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="150dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/del_acc_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/del_acc_email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/de_delete_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/del_acc_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="#FC1401"
        android:textColor="#ffffff"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:text="@string/delete_acc" />

</RelativeLayout>
