<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sid.viwe.homeActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:screenOrientation="portrait">

    <include layout="@layout/custom_toolbar"
        android:id="@+id/home_page_toolbarr"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="111dp"
        android:text="@string/welcome_to_viwe_app"
        android:textSize="25sp"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reg_btn"
        android:layout_alignStart="@+id/reg_btn"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/already_a_user_text"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/no_acc_text"
        android:textColor="#ffffff" />
</RelativeLayout>
