<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.sid.viwe.profileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/custom_back"
        android:layout_marginTop="9dp"
        android:src="@drawable/default_avatar" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/profile_name"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:text="@string/displayname"
        android:textSize="25sp"
        android:layout_below="@+id/profile_image"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_status"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="@string/default_status"
        android:layout_below="@+id/profile_name"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:id="@+id/make_contact"
        android:text="@string/make_new_contact"
        android:layout_below="@id/profile_status"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:id="@+id/decline_req"
        android:text="@string/decline_request"
        android:layout_below="@id/make_contact"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        />


    <Button
        android:id="@+id/custom_back"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/ic_keyboard_arrow_left_white_24dp" />

</RelativeLayout>
